fixed misaligned section at smaller widths

--- a/scss/_services.scss
+++ b/scss/_services.scss
@@ -29,6 +29,12 @@
 
   .row {
     justify-content: center;
+    .col-lg-3 {
+      flex: 1 1 20%;
+      @media (max-width: 992px) {
+        flex: 0 0 100%;
+      }
+    }
   }
 
   @media (min-width: 992px) {
